<resources>
    <string name="app_name">Gyanith 20</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="package_name">com.barebrains.gyanith20</string>

    <!--SharedPreference Keys-->
    <string name="gyanithUserKey">gyanithUser</string>
    <string name="likedPostsKey">likedPosts</string>
    <string name="eventItemsKey">eventItems</string>
    <string name="regItemsKey">regEventItems</string>
    <string name="favSet">favIdsSet</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>



    <!-- Strings related to login -->
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--Navigation TopBarName-->
    <string name="topbar_home">@string/app_name</string>
    <string name="topbar_schedule">Schedule</string>
    <string name="topbar_favourites">Favourites</string>
    <string name="topbar_notification">Notification</string>
    <string name="topbar_community">Community</string>
    <!--Schedule Tabs-->
    <string name="schedule_tab0">LIVE</string>
    <string name="schedule_tab1">DAY 0</string>
    <string name="schedule_tab2">DAY 1</string>
    <string name="schedule_tab3">DAY 2</string>


    <!--Home Categories-->
    <string name="workshop">Workshop</string>
    <string name="tech_Events">Technical Events</string>
    <string name="non_tech_Events">Non Technical Events</string>
    <string name="pro_shows">Pro Shows</string>
    <string name="guest_lectures">Guest Lectures</string>
    <string name="about_us">About us</string>

    <string name="msg">Your account was created successfully, please Verify your email and then login into your account</string>
    <string name="about">The coast of Bay of Bengal witnessed the rise of a new era of technical education as one of India\'s Institute of national importance, National Institute of Technology, Puducherry, got established in 2010, at Karaikal. Karaikal,  formerly known  for its diverse culture and cuisines is now redefining the standards of technical education.
NIT Puducherry is famous for its advancements made in technical fields and a major contribution is done through the Institute\'s proudest event, Gyanith. Since it\'s inception in 201., Gyanith is setting up a new benchmark every year, in the number of events as well as in the number of participants. Spreading its fame across Puducherry, Tamil Nadu, and Kerala, Gyanith  is now ready to be India\'s largest sought technical platform, with its.. th  edition, where it comes up with more events, newer and better! After the curtain raiser of Gyanith \'20,  the highlights are many workshops on hot and trending topics in technical fields, handled by the person of expertise from the respective areas. Apart from the technical events, Gyanith is a platform to bring up young and talented brains from the school benches through its science expos and project expos are awaiting  the students pursuing  undergraduate and higher degrees. Also with a big fat stage with non restricting mike,  we welcome all the proficient performers to come and entertain our great audience through our non technical events.Gyanith \'20 is this undoubtedly, a great opportunity to showcase and widen your vistas of knowledge.

</string>
</resources>
